adding contact / messing with flex images

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/mystyle.css">
+  <link rel="stylesheet" href="css/about.css">
   <meta name="robots" content="noindex, follow">
 </head>
 
@@ -26,10 +26,10 @@
       <div id="logo" class="img bg-wrap text-center py-4" style="background-image: url(img/logo.jpeg);">
       </div>
       <ul class="list-unstyled components mb-5">
-        <li class="active">
+        <li>
           <a href="./index.html"><span class="fa fa-home mr-3"></span>Welkom</a>
         </li>
-        <li>
+        <li class="active">
           <a href="./about.html"><span class="fa fa-user mr-3"></span>Over mij</a>
         </li>
         <li>
@@ -45,26 +45,34 @@
 
     </nav>
 
-    <!-- Page Content  -->
-    <div id="container">
-      <div id="content">
-        <h2 class="mb-4">Welkom bij Praktijk Koester</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-          dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-          est
-          laborum.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-          dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-          est
-          laborum.</p>
+    <div class="flex-container">
+      <div class="flex-child content">
+        <h2 class="">Jessica De Wilde</h2>
+        <h3 class="mb-4">Orthopedagoge</h3>
+        <p>Ik ben Jessica De Wilde en in 2011 studeerde ik af als orthopedagoge.</p>
+        <p>Ik geloof dat ieder kind sterktes heeft en binnen mijn begeleiding vertrek ik van daaruit. Ieder kind kan
+          groeien als ze weten waar ze goed in zijn. Met emoties leren omgaan is een echter uitdaging waar vele
+          kinderen
+          en jongeren mee worstelen. Als kinderen moeilijk gedrag stellen, willen ze communiceren. Ik ga met hen op
+          zoek
+          naar de betekenis en de functie van dit gedrag. Samen leren we methodieken om hun emoties te kanaliseren en
+          op
+          een sociaal aanvaardbare manier te uiten. Van daaruit geloof ik zeer sterk in psycho-educatie om de
+          veerkracht
+          van kinderen te versterken.</p>
+        <p>Daarnaast bied ik ook intensieve opvoedingsondersteuning bij vragen waar ouders mee worstelen. Het is mijn
+          vaste overtuiging dat ieder gezin mogelijkheden en krachten kent. De dynamiek tussen het kind en de ouder
+          blijft mij boeien. Je kan een kind niet los zien van zijn context en ik ga daarmee aan de slag.</p>
       </div>
+
+
+      <div class="flex-child">
+        <img class="mt-5" id="img" src="./img/foto-Jessica.png" alt="Foto Jessica De Wilde">
+      </div>
+
     </div>
+
+
   </div>
 
   <script src="./js/jquery.min.js.download"></script>
