--- a/pricing.html
+++ b/pricing.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- saved from url=(0014)about:internet -->
 <html lang="en">
 
 <head>
@@ -12,6 +13,8 @@
   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/mystyle.css">
+  <link rel="stylesheet" href="css/pricing.css">
+
   <meta name="robots" content="noindex, follow">
 </head>
 
@@ -24,9 +27,12 @@
         </button>
       </div>
       <div id="logo" class="img bg-wrap text-center py-4" style="background-image: url(img/logo.jpeg);">
+        <!-- <div class="user-logo">
+          <div class="img" style="background-image: url(img/logo.jpeg);"></div>
+        </div> -->
       </div>
       <ul class="list-unstyled components mb-5">
-        <li class="active">
+        <li>
           <a href="./index.html"><span class="fa fa-home mr-3"></span>Welkom</a>
         </li>
         <li>
@@ -35,7 +41,7 @@
         <li>
           <a href="./vision.html"><span class="fa fa-bullseye mr-3"></span>Visie</a>
         </li>
-        <li>
+        <li class="active">
           <a href="./pricing.html"><span class="fa fa-tag mr-3"></span>Aanbod & Tarieven </a>
         </li>
         <li>
@@ -47,22 +53,23 @@
 
     <!-- Page Content  -->
     <div id="container">
-      <div id="content">
-        <h2 class="mb-4">Welkom bij Praktijk Koester</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-          dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-          est
-          laborum.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-          dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-          est
-          laborum.</p>
+      <div id="content" class="pd-top-25 p-4">
+        <h2 class="mb-4">Tarieven</h2>
+        <ul class="list-unstyled list-hours mb-5 text-left mx-auto">
+          <li class="list-unstyled-item list-hours-item d-flex">
+            Prijs 1
+            <span class="ml-auto">50 euro</span>
+          </li>
+          <li class="list-unstyled-item list-hours-item d-flex">
+            Prijs 2
+            <span class="ml-auto">60 euro</span>
+          </li>
+          <li class="list-unstyled-item list-hours-item d-flex">
+            Prijs 3
+            <span class="ml-auto">10 euro</span>
+
+          </li>
+        </ul>
       </div>
     </div>
   </div>
