--- a/index.html
+++ b/index.html
@@ -1,1 +1,100 @@
-coming soon
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Praktijk Koester</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link href="css/mystyle.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/about.css">
+    <meta name="robots" content="noindex, follow">
+</head>
+
+<body>
+
+    <div class="wrapper d-flex align-items-stretch">
+        <nav id="sidebar">
+            <div class="custom-menu">
+                <button type="button" id="sidebarCollapse" class="btn btn-primary">
+                </button>
+            </div>
+            <div id="logo" class="img bg-wrap text-center py-4" style="background-image: url(img/logo.jpeg);">
+            </div>
+            <ul class="list-unstyled components mb-5">
+                <li>
+                    <a href="./index.html"><span class="fa fa-home mr-3"></span>Welkom</a>
+                </li>
+            </ul>
+
+        </nav>
+
+        <div class="flex-container">
+            <div class="flex-child content">
+                <h2 class="">Jessica De Wilde</h2>
+                <h3 class="mb-4">Orthopedagoge</h3>
+                <p>Ik ben Jessica, vrouw, mama, partner, vriendin, zus, dochter... en orthopedagoge in hart en nieren.
+                    Ik word
+                    blij van fijne gezinsmomenten, een goede babbel, lekker eten, een mooi boek, een gezellige avond met
+                    familie
+                    en vrienden, een fietstocht tussen de velden, een bezoek aan de sauna...
+                    Ik ben een bezige bij met een hart voor kinderen en jongeren. Vaak ben ik energiek, optimistisch en
+                    enthousiast. Inderdaad: vaak maar niet altijd... Door de jaren heen heb ik dan ook geleerd om niet
+                    te blijven
+                    gaan, om naar mijn lichaam te luisteren, dicht bij mezelf te blijven en eens lekker niets te doen.
+                </p>
+
+                <p>Na mijn opleiding tot klinisch orthopedagoge ging ik in 2011 aan de slag binnen de bijzondere
+                    jeugdzorg.
+                    Momenteel ben ik werkzaam bij kinderen met autisme en gedrags- en emotionele stoornissen. Kinderen
+                    en jongeren
+                    begeleiden en ondersteunen in de hindernissen die op hun pad komen, is een rode draad in mijn
+                    (professionele)
+                    leven.
+                    In 2022 begon ik er van te dromen zelf een plekje te creëren waar kinderen, jongeren en
+                    jongvolwassenen zich
+                    veilig en geborgen mogen voelen. Een plek waar ze mogen zijn, waar iets mag helen, waar ze mogen
+                    voelen... En
+                    zo
+                    ontstond Praktijk Koester!
+                    Genoeg over mij. Wat is jouw verhaal?
+                    Ik kijk er naar uit je te leren kennen!
+                    Jessica</p>
+                <!-- <p>Ik ben Jessica De Wilde en in 2011 studeerde ik af als orthopedagoge.</p>
+        <p>Ik geloof dat ieder kind sterktes heeft en binnen mijn begeleiding vertrek ik van daaruit. Ieder kind kan
+          groeien als ze weten waar ze goed in zijn. Met emoties leren omgaan is een echter uitdaging waar vele
+          kinderen
+          en jongeren mee worstelen. Als kinderen moeilijk gedrag stellen, willen ze communiceren. Ik ga met hen op
+          zoek
+          naar de betekenis en de functie van dit gedrag. Samen leren we methodieken om hun emoties te kanaliseren en
+          op
+          een sociaal aanvaardbare manier te uiten. Van daaruit geloof ik zeer sterk in psycho-educatie om de
+          veerkracht
+          van kinderen te versterken.</p>
+        <p>Daarnaast bied ik ook intensieve opvoedingsondersteuning bij vragen waar ouders mee worstelen. Het is mijn
+          vaste overtuiging dat ieder gezin mogelijkheden en krachten kent. De dynamiek tussen het kind en de ouder
+          blijft mij boeien. Je kan een kind niet los zien van zijn context en ik ga daarmee aan de slag.</p> -->
+            </div>
+
+
+            <div class="flex-child">
+                <img class="mt-5" id="img" src="./img/foto-Jessica.png" alt="Foto Jessica De Wilde">
+            </div>
+
+        </div>
+
+
+    </div>
+
+    <script src="./js/jquery.min.js.download"></script>
+    <script src="./js/popper.js.download"></script>
+    <script src="./js/bootstrap.min.js.download"></script>
+    <script src="./js/main.js.download"></script>
+
+</body>
+
+</html>
