--- a/about.html
+++ b/about.html
@@ -49,7 +49,25 @@
       <div class="flex-child content">
         <h2 class="">Jessica De Wilde</h2>
         <h3 class="mb-4">Orthopedagoge</h3>
-        <p>Ik ben Jessica De Wilde en in 2011 studeerde ik af als orthopedagoge.</p>
+        <p>Ik ben Jessica, vrouw, mama, partner, vriendin, zus, dochter... en orthopedagoge in hart en nieren. Ik word
+          blij van fijne gezinsmomenten, een goede babbel, lekker eten, een mooi boek, een gezellige avond met familie
+          en vrienden, een fietstocht tussen de velden, een bezoek aan de sauna...
+          Ik ben een bezige bij met een hart voor kinderen en jongeren. Vaak ben ik energiek, optimistisch en
+          enthousiast. Inderdaad: vaak maar niet altijd... Door de jaren heen heb ik dan ook geleerd om niet te blijven
+          gaan, om naar mijn lichaam te luisteren, dicht bij mezelf te blijven en eens lekker niets te doen.</p>
+
+        <p>Na mijn opleiding tot klinisch orthopedagoge ging ik in 2011 aan de slag binnen de bijzondere jeugdzorg.
+          Momenteel ben ik werkzaam bij kinderen met autisme en gedrags- en emotionele stoornissen. Kinderen en jongeren
+          begeleiden en ondersteunen in de hindernissen die op hun pad komen, is een rode draad in mijn (professionele)
+          leven.
+          In 2022 begon ik er van te dromen zelf een plekje te creëren waar kinderen, jongeren en jongvolwassenen zich
+          veilig en geborgen mogen voelen. Een plek waar ze mogen zijn, waar iets mag helen, waar ze mogen voelen... En
+          zo
+          ontstond Praktijk Koester!
+          Genoeg over mij. Wat is jouw verhaal?
+          Ik kijk er naar uit je te leren kennen!
+          Jessica</p>
+        <!-- <p>Ik ben Jessica De Wilde en in 2011 studeerde ik af als orthopedagoge.</p>
         <p>Ik geloof dat ieder kind sterktes heeft en binnen mijn begeleiding vertrek ik van daaruit. Ieder kind kan
           groeien als ze weten waar ze goed in zijn. Met emoties leren omgaan is een echter uitdaging waar vele
           kinderen
@@ -62,7 +80,7 @@
           van kinderen te versterken.</p>
         <p>Daarnaast bied ik ook intensieve opvoedingsondersteuning bij vragen waar ouders mee worstelen. Het is mijn
           vaste overtuiging dat ieder gezin mogelijkheden en krachten kent. De dynamiek tussen het kind en de ouder
-          blijft mij boeien. Je kan een kind niet los zien van zijn context en ik ga daarmee aan de slag.</p>
+          blijft mij boeien. Je kan een kind niet los zien van zijn context en ik ga daarmee aan de slag.</p> -->
       </div>
 
 
