--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
                 <li>
                     <a href="./index.html"><span class="fa fa-home mr-3"></span>Welkom</a>
                 </li>
+
+                <li class="active">
+                    <a href="./pricing.html"><span class="fa fa-tag mr-3"></span>Aanbod & Tarieven </a>
+                </li>
             </ul>
 
         </nav>
