--- a/pricing.html
+++ b/pricing.html
@@ -35,17 +35,8 @@
         <li>
           <a href="./index.html"><span class="fa fa-home mr-3"></span>Welkom</a>
         </li>
-        <li>
-          <a href="./about.html"><span class="fa fa-user mr-3"></span>Over mij</a>
-        </li>
-        <li>
-          <a href="./vision.html"><span class="fa fa-bullseye mr-3"></span>Visie</a>
-        </li>
         <li class="active">
           <a href="./pricing.html"><span class="fa fa-tag mr-3"></span>Aanbod & Tarieven </a>
-        </li>
-        <li>
-          <a href="./contact.html"><span class="fa fa-address-book mr-3"></span>Contact</a>
         </li>
       </ul>
 
@@ -57,19 +48,28 @@
         <h2 class="mb-4">Tarieven</h2>
         <ul class="list-unstyled list-hours mb-5 text-left mx-auto">
           <li class="list-unstyled-item list-hours-item d-flex">
-            Prijs 1
-            <span class="ml-auto">50 euro</span>
+            Intake 90 min
+            <span class="ml-auto">100 euro</span>
           </li>
           <li class="list-unstyled-item list-hours-item d-flex">
-            Prijs 2
-            <span class="ml-auto">60 euro</span>
+            Individuele sessie 50 min
+            <span class="ml-auto">65 euro</span>
           </li>
           <li class="list-unstyled-item list-hours-item d-flex">
-            Prijs 3
-            <span class="ml-auto">10 euro</span>
-
+            Oudergesprek 90 min
+            <span class="ml-auto">100 euro</span>
+          </li>
+          <li class="list-unstyled-item list-hours-item d-flex">
+            extern overleg (exclusief kilometers)
+            <span class="ml-auto">100 euro</span>
           </li>
         </ul>
+
+        <p>De gesprekken vinden plaats bij mij in de praktijk.
+          Om een afspraak te maken, is geen verwijzing nodig van de huisarts
+          Mocht je niet naar de afspraak kunnen komen, dan meld je je hiervoor af en maken we een nieuwe afspraak.
+          Gebeurt dit korter dan 48 uur van te voren dan wordt de helft van het bedrag in rekening gebracht.
+          Terugbetaling via de mutualiteit is mogelijk. </p>
       </div>
     </div>
   </div>
